Show example progress

--- a/example/index.html
+++ b/example/index.html
@@ -10,5 +10,11 @@
     <input type="file" id="files" name="file" />
     <button id="upload">Upload</button>
     <button id="cancel">Cancel</button>
+    <p id="progress" style="display:none;">
+      Progress <span id="sent">0</span> of <span id="total">0</span>
+    </p>
+    <p id="done" style="display:none;">
+      Done!
+    </p>
   </body>
 </html>
